--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <div class="brand">
         <div class="logo">YN</div>
         <div>
-          <h1>Your Name</h1>
+          <h1>Shanwash.S</h1>
           <p>Frontend Developer · UI/UX · Open to work</p>
         </div>
       </div>
@@ -148,7 +148,7 @@
 
     <section class="hero">
       <div class="intro">
-        <h2>Hi — I’m <span style="color:var(--accent)">Your Name</span>.</h2>
+        <h2>Hi — I’m Shanwash.S <span style="color:var(--accent)">Shanwash.S</span>.</h2>
         <p class="lead">I build accessible, responsive websites and delightful user interfaces. I turn ideas into clean code and polished experiences.</p>
 
         <div class="cta-group">
@@ -163,7 +163,7 @@
 
       <aside class="profile-card">
         <div class="avatar">Your Photo</div>
-        <h3>Your Name</h3>
+        <h3>Shanwash.S</h3>
         <p>Frontend developer focused on performance, accessibility and clean design. I enjoy building things that people love to use.</p>
 
         <div style="margin-top:12px;display:flex;gap:8px;flex-wrap:wrap">
@@ -248,7 +248,7 @@
     </main>
 
     <footer>
-      <div>© <span id="year"></span> Your Name</div>
+      <div>© <span id="year"></span> Shanwash.S</div>
       <div class="muted">Built with HTML & CSS — Responsive • Accessible • Lightweight</div>
     </footer>
   </div>
