--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       <section id="contact" class="card">
         <h4>Contact</h4>
         <p class="muted">Interested in working together? Send an email or connect on LinkedIn.</p>
-        <p style="margin:10px 0"><strong>Email:</strong> <a href="shanshaju5044@gmail.com" style="color:var(--accent);text-decoration:none">your.email@example.com</a></p>
+        <p style="margin:10px 0"><strong>Email:</strong> <a href="shanshaju5044@gmail.com" style="color:var(--accent);text-decoration:none">shanshaju5044@gmail.com</a></p>
         <p style="margin:0"><strong>LinkedIn:</strong> <a href="#" style="color:var(--accent);text-decoration:none">linkedin.com/in/yourprofile</a></p>
       </section>
 
