--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   <div class="container">
     <header>
       <div class="brand">
-        <div class="logo">YN</div>
+        <div class="logo">Shanwash.S</div>
         <div>
           <h1>Shanwash.S</h1>
           <p>Frontend Developer · UI/UX · Open to work</p>
