--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <div class="brand">
         <div class="logo">Shanwash.S</div>
         <div>
-          <h1>Shanwash.S</h1>
+          <h1>Shan</h1>
           <p>Frontend Developer · UI/UX · Open to work</p>
         </div>
       </div>
