--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
   <div class="container">
     <header>
       <div class="brand">
-        <div class="logo">Shanwash.S</div>
+        <div class="logo">Shan</div>
         <div>
-          <h1>Shan</h1>
+          <h1>Shanwash.S</h1>
           <p>Frontend Developer · UI/UX · Open to work</p>
         </div>
       </div>
