--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
     <section class="hero">
       <div class="intro">
-        <h2>Hi — I’m Shanwash.S <span style="color:var(--accent)">Shanwash.S</span>.</h2>
+        <h2>Hi — I’m Shanwash <span style="color:var(--accent)">The frontend devloper</span>.</h2>
         <p class="lead">I build accessible, responsive websites and delightful user interfaces. I turn ideas into clean code and polished experiences.</p>
 
         <div class="cta-group">
