--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@
         <h4>Contact</h4>
         <p class="muted">Interested in working together? Send an email or connect on LinkedIn.</p>
         <p style="margin:10px 0"><strong>Email:</strong> <a href="shanshaju5044@gmail.com" style="color:var(--accent);text-decoration:none">shanshaju5044@gmail.com</a></p>
-        <p style="margin:0"><strong>LinkedIn:</strong> <a href="#" style="color:var(--accent);text-decoration:none">linkedin.com/in/yourprofile</a></p>
+        <p style="margin:0"><strong>LinkedIn:</strong> <a href="#" style="color:var(--accent);text-decoration:none">www.linkedin.com/in/
+s-shanwash-20b753296</a></p>
       </section>
 
     </main>
