--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       </div>
 
       <aside class="profile-card">
-        <div class="avatar">Your Photo</div>
+        <div class="avatar"><img src="C:\Users\shans\Downloads\download.jpeg" width="350" height="223"></div>
         <h3>Shanwash.S</h3>
         <p>Frontend developer focused on performance, accessibility and clean design. I enjoy building things that people love to use.</p>
 
